--- a/style.css
+++ b/style.css
@@ -14,12 +14,16 @@
 }
 
 body {
-    height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background: var(--Light-gray);
     font-family: 'Outfit', sans-serif;
 }
 
-section {
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,7 +53,7 @@ section {
     border-radius: 8px;
 }
 
-h3 {
+h1 {
     margin: 5px;
     font-size: 20px;
     font-weight: 700;
@@ -67,7 +71,7 @@ p {
 
 .attribution {
     width: 300px;
-    /* margin: 8px; */
+    margin: 8px;
     text-align: center;
     color: var(--Dark-blue);
     font-size: 12px;
